home.html - Nossa tecnologia v2

--- a/site/pages/home.html
+++ b/site/pages/home.html
@@ -63,19 +63,24 @@
         </div>
     </section>
     <section class="tecnologia">
-        <div class="texto">
+        <div class="titulo">
             <h1>NOSSA TECNOLOGIA</h1>
-            <p>Utilizamos tecnologias confiáveis e acessíveis para garantir precisão e eficiência:</p>
-            <ul>
-                <li>Arduino UNO e o Sensor de Umidade (MTS) para a captação de dados.</li>
-                <li>Lançamento dos dados coletados diretamente em um banco de dados seguro.</li>
-                <li>Transformação das informações em dados intuitivos e acessíveis através de nossa dashboard exclusiva.
-                </li>
-            </ul>
+            <p>Utilizamos tecnologias confiáveis e acessíveis para garantir precisão e eficiência</p>
         </div>
-        <img src="../imagens/sensor de umidade.png" alt="">
+        <div class="texto">
+            <div class="um">
+                <li>Arduino UNO e o Sensor de Umidade (MTS) para a captação de dados.</li>
+            </div>
+            <div class="dois">
+                <li>Lançamento dos dados coletados diretamente em um banco de dados seguro.</li>
+            </div>
+            <div class="tres">
+                <li>Transformação das informações em dados intuitivos e acessíveis através de nossa dashboard exclusiva.</li>
+            </div>
+        </div>
+        <!-- <img src="../imagens/sensor de umidade.png" alt="">
         <img src="../imagens/armazenamento-de-banco-de-dados.png" alt="">
-        <img src="" alt="">
+        <img src="" alt=""> -->
     </section>
     <!-- <div class="arduino">
         <br> <br>
