mudanças no site institucional

--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WaterWorks</title>
+    <title>WaterWorks | Soluções de Monitoramento de Umidade para Café</title>
     <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,15 +22,13 @@
             </a>
         </div>
         <div class="opcoes">
-            <li><a href="./monitoramento.html">Monitoramento</a></li>
+            <li><a href="#simulador">Simulador</a></li>
             <li><a href="#tecnologia">Tecnologia</a></li>
             <li><a href="#dashboard">Dashboard</a></li>
-            <li><a href="#simulador">Simulador</a></li>
-            <li><a href="#sobreNos">Sobre nós</a></li>
+            <li><a href="./monitoramento.html">Monitoramento</a></li>
+            <li><a href="./sobrenos.html">Sobre nós</a></li>
         </div>
         <div class="entrar">
-            <!-- <li><a href="./pages/login.html">LOGIN</a></li>
-            <li><a href="./pages/tela_de_cadastro.html">CADASTRO</a></li> -->
             <a href="./login.html"><img src="../imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png" alt=""></a>
         </div>
     </header>
@@ -38,15 +36,22 @@
         <div class="fundo"></div>
         <div class="titulo">
             <div class="um">
-                <p>LAZER, LONGEVIDADE E SEGURANÇA</p>
+                <p>EFICIÊNCIA, SUSTENTABILIDADE E INOVAÇÃO</p>
             </div>
             <div class="dois">
-                <p>A <span>Water Works</span> é a empresa mais segura e rentável do mercado.</p>
+                <p>A <span>Water Works</span> traz a solução perfeita para controlar a umidade do solo e melhorar o
+                    rendimento das suas lavouras de café.</p>
             </div>
         </div>
     </section>
-    <section class="vantagem">
-
+    <section class="simulador" id="simulador">
+        <div class="container">
+            <div class="texto">
+                <h2>Descubra como economizar recursos e maximizar resultados!</h2>
+                <a href="./calculadoraWaterWorksV3.html" class="botao">Simular agora</a>
+            </div>
+            <div class="imagem"></div>
+        </div>
     </section>
     <section class="tecnologia" id="tecnologia">
         <div class="titulo">
@@ -93,22 +98,62 @@
             <div class="imagem"></div>
         </div>
     </section>
-    <section class="simulador" id="simulador">
-        <div class="container">
-            <h2>Descubra como economizar recursos e maximizar resultados!</h2>
-            <!-- <p>Calcule agora a quantidade ideal de sensores e planeje melhor seu investimento.</p> -->
-            <a href="" class="botao">Simular agora</a>
+    <section class="equipe">
+        <div class="texto">
+            <h1>Conheça os nossos <a href="">especialistas</a></h1>
         </div>
-        <!-- <div class="tooltip">
-            <p>🧮 Planeje seu investimento com nosso Simulador Financeiro!</p>
-        </div> -->
+        <div class="perfil">
+            <div class="icones">
+                <a href="https://www.instagram.com/redzin.or/">
+                    <div class="um">
+                        <div class="circulo"></div>
+                        <p>@aaron.cutipa</p>
+                    </div>
+                </a>
+                <a href="https://www.instagram.com/gui.augusto.136/">
+                    <div class="dois">
+                        <div class="circulo"></div>
+                        <p>@guilherme.augusto</p>
+                    </div>
+                </a>
+                <a href="https://www.instagram.com/juliavisconti1506/">
+                    <div class="tres">
+                        <div class="circulo"></div>
+                        <p>@julia.visconti</p>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="quatro">
+                        <div class="circulo"></div>
+                        <p>@pedro.amoroso</p>
+                    </div>
+                </a>
+                <a href="">
+                    <div class="cinco">
+                        <div class="circulo"></div>
+                        <p>@vlad.ribeiro</p>
+                    </div>
+                </a>
+                <a href="https://www.instagram.com/za_chavier/">
+                    <div class="seis">
+                        <div class="circulo"></div>
+                        <p>@zaqueu.chavier</p>
+                    </div>
+                </a>
+            </div>
+        </div>
     </section>
-    <div id="cookie" class="cookie">
+    <footer class="footer">
+        
+
+    </footer>
+    <!-- <div id="cookie" class="cookie">
         <p>
-            Clicando em "Aceito todos os cookies", você aceita nossa política de cookies com objetivo de melhorar sua navegação. Conheça nossa política e <a href="">configure seus cookies</a>
+            Clicando em "Aceito todos os cookies", você aceita nossa política de cookies com objetivo de melhorar sua
+            navegação. Conheça nossa política e <a href="">configure seus cookies</a>
         </p>
         <button id="aceitar-cookies">aceitar todos os cookies</button>
-    </div>
+    </div> -->
 </body>
 
 </html>
