--- a/site/pages/sobrenos.html
+++ b/site/pages/sobrenos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WaterWorks | O que é o monitoramentode umidade de solo?</title>
+    <title>WaterWorks | Sobre nós</title>
     <link rel="stylesheet" href="../css/secoes.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,22 +32,10 @@
             <a href="./login.html"><img src="../imgs - Home/icons/imagem-do-usuario-com-fundo-preto.png" alt=""></a>
         </div>
     </header>
-    <section class="oQueE" id="monitoramento">
-        <div class="solo">
-            <div class="texto">
-                <h1>O QUE É O MONITORAMENTO DE UMIDADE DE SOLO?</h1>
-                <p>O monitoramento da umidade do solo é uma técnica que permite acompanhar em tempo real a quantidade de água presente no solo de uma plantação. Essa prática é essencial para agricultores, pois oferece informações precisas que ajudam a tomar decisões estratégicas sobre irrigação e manejo hídrico, otimizando o uso da água e promovendo o crescimento saudável das plantas.</p>
-            </div>
-            <div class="imagem"></div>
-        </div>
-        <div class="cafe">
-            <div class="texto">
-                <p> No caso de plantações como o café, o monitoramento da umidade do solo é ainda mais importante, já que a irrigação inadequada pode impactar diretamente a qualidade dos grãos e a produtividade da lavoura.
-                </p>
-            </div>
-            <div class="imagem"></div>
-        </div>
+    <section class="sobreNos">
+
     </section>
-    
+
 </body>
+
 </html>
