só falta a seção sobre nós

--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -144,16 +144,65 @@
         </div>
     </section>
     <footer class="footer">
-        
+        <div class="barrinha">
+            <div class="logoWW">
+                <a href="#banner">
+                    <img src="../imgs - Home/logoWW.png" alt="WaterWorks">
+                    <li>ater Works</li>
+                </a>
+            </div>
+        </div>
+        <div class="links">
+            <div class="opcoes">
+                <li><a href="#simulador">Simulador</a></li>
+                <li><a href="#tecnologia">Tecnologia</a></li>
+                <li><a href="#dashboard">Dashboard</a></li>
+                <li><a href="./monitoramento.html">Monitoramento</a></li>
+                <li><a href="./sobrenos.html">Sobre nós</a></li>
+            </div>
+        </div>
+        <div class="redes">
+            <div class="container">
+                <p>Acompanhe a Water Works nas redes sociais</p>
+                <img src="../imgs - Home/icons/facebook.png" alt="">
+                <img src="../imgs - Home/icons/instagram.png" alt="">
+                <img src="../imgs - Home/icons/twitter.png" alt="">
+                <img src="../imgs - Home/icons/youtube.png" alt="">
+            </div>
+        </div>
+        <div class="texto">
+            <p>A marca WaterWorks é de propriedade da WaterWorks Tecnologia S.A. Todas as operações realizadas pela
+                WaterWorks são executadas pela WaterWorks Tecnologia S.A., inscrita sob o CNPJ: XX.XXX.XXX/XXXX-XX,
+                instituição autorizada pelos órgãos reguladores competentes.
 
+                Copyright © 2024 WaterWorks. Todos os direitos reservados. Toda comunicação através da rede mundial de
+                computadores está sujeita a interrupções ou atrasos, podendo impedir ou prejudicar o envio de dados ou a
+                recepção de informações atualizadas. A WaterWorks exime-se de responsabilidade por danos sofridos por
+                seus clientes, decorrentes de falhas de serviços disponibilizados por terceiros.
+
+                A WaterWorks Tecnologia S.A., inscrita no CNPJ/ME sob o nº XX.XXX.XXX/XXXX-XX, é uma empresa autorizada
+                a operar no mercado e exime-se de responsabilidade por danos sofridos por seus clientes, por falhas nos
+                serviços de terceiros. A WaterWorks informa que toda comunicação via rede mundial de computadores está
+                sujeita a interrupções ou atrasos, podendo afetar o envio de ordens ou a recepção de informações em
+                tempo real.
+
+                A WaterWorks assegura que os dados de seus clientes são mantidos de forma segura, conforme regulamentos
+                aplicáveis, e que os recursos ou informações coletadas são exclusivamente utilizados para o fornecimento
+                de nossos serviços de monitoramento e análise de umidade do solo. A WaterWorks não se responsabiliza por
+                eventuais falhas em serviços fornecidos por terceiros.</p>
+        </div>
+        <div class="endereco">
+            <p class="rua">Rua Haddock Lobo, 595, Cerqueira César - São Paulo, SP. CEP: 01414-001</p>
+            <p class="copy">Copyright © 2024 WaterWorks. CNPJ: XX.XXX.XXX/XXXX-XX</p>
+        </div>
     </footer>
-    <!-- <div id="cookie" class="cookie">
+    <div id="cookie" class="cookie">
         <p>
             Clicando em "Aceito todos os cookies", você aceita nossa política de cookies com objetivo de melhorar sua
             navegação. Conheça nossa política e <a href="">configure seus cookies</a>
         </p>
         <button id="aceitar-cookies">aceitar todos os cookies</button>
-    </div> -->
+    </div>
 </body>
 
 </html>
