--- a/site/pages/sobrenos.html
+++ b/site/pages/sobrenos.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="logoWW">
-            <a href="#banner">
+            <a href="index.html#banner">
                 <img src="../imgs - Home/logoWW.png" alt="WaterWorks">
                 <li>ater Works</li>
             </a>
@@ -33,7 +33,7 @@
         </div>
     </header>
     <section class="sobreNos">
-
+        <img src="../imagens/404 Error.gif" alt="Error 404" class="error">
     </section>
 
 </body>
